# Terminal-Snake-Game

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: apple.cpp  apple.h  coords.h  main.cpp  snake.cpp  snake.h
